add profile user link

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -138,8 +138,7 @@
                                     show-modal="#modal-create-game">
                                 {{ 'create_game' | translate }}
                             </button>
-                            <a href
-                               show-profile="user.uid" 
+                            <a ng-href="/profile/{{ user.uid }}"
                                class="app-navigation__profile">
                                 <div class="app-navigation__profile-infos app-navigation__profile-infos--blitz"
                                      title="{{ 'blitz'|translate }}">
@@ -182,9 +181,8 @@
 
             <div class="app-drawer mdl-layout__drawer">
                 <span class="app-layout-title mdl-layout-title">
-                    <a href
+                    <a ng-href="/profile/{{ user.uid }}"
                        ng-click="closeDrawer()"
-                       show-profile="user.uid" 
                        class="app-navigation__profile">
                         <div class="app-navigation__profile-user">
                             <img avatar
