--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -1,8 +1,9 @@
 <div element class="app-element app-element--created-games mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <element-toggle name="'games'" collection="createdGames"></element-toggle>
-    <div element-content class="app-element__body">
-        <table ng-show="createdGames.length"
-               class="app-table mdl-data-table mdl-js-data-table">
+    <div element-content 
+         ng-show="createdGames.length"
+         class="app-element__body">
+        <table class="app-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
                     <th></th>
@@ -49,9 +50,10 @@
 
 <div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <element-toggle name="'favorites'" collection="favorites"></element-toggle>
-    <div element-content class="app-element__body">
-        <table ng-show="favorites.length"
-               class="app-table mdl-data-table mdl-js-data-table">
+    <div element-content 
+         ng-show="favorites.length"
+         class="app-element__body">
+        <table class="app-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
                     <th></th>
@@ -91,9 +93,10 @@
 
 <div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <element-toggle name="'challengers'" collection="challengers"></element-toggle>
-    <div element-content class="app-element__body">
-        <table ng-show="challengers.length"
-               class="app-table mdl-data-table mdl-js-data-table">
+    <div element-content 
+         ng-show="challengers.length"
+         class="app-element__body">
+        <table class="app-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
                     <th></th>
