--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3567,7 +3567,11 @@ a {
 @media screen and (max-width: 479px) {
 
   .mdl-grid {
-    padding: 8px 0;
+    padding: 4px 0 8px 0;
+  }
+
+  .mdl-grid .mdl-cell {
+    margin: 4px 8px;
   }
 
   .mdl-data-table th {
