--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -6,10 +6,10 @@
                class="app-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
-                    <th></th>
-                    <th sortable collection="createdGames" expression="['points', 'time', 'color']" icon="star"></th>
-                    <th sortable collection="createdGames" expression="['color', 'points', 'time']" icon="invert_colors"></th>
-                    <th sortable collection="createdGames" expression="['time', 'points', 'color']" icon="schedule"></th>
+                    <th sortable collection="createdGames" expression="['name', 'points', 'time', 'color']" icon="account_circle"></th>
+                    <th sortable collection="createdGames" expression="['points', 'time', 'color', 'name']" icon="star"></th>
+                    <th sortable collection="createdGames" expression="['color', 'points', 'time', 'name']" icon="invert_colors"></th>
+                    <th sortable collection="createdGames" expression="['time', 'points', 'color', 'name']" icon="schedule"></th>
                     <th></th>
                 </tr>
             </thead>
@@ -56,9 +56,9 @@
         <table class="app-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
-                    <th></th>
-                    <th sortable collection="favorites" expression="['blitz.points', 'rapid.points']" icon="flash_on"></th>
-                    <th sortable collection="favorites" expression="['rapid.points', 'blitz.points']" icon="timer"></th>
+                    <th sortable collection="favorites" expression="['name', 'blitz.points', 'rapid.points']" icon="account_circle"></th>
+                    <th sortable collection="favorites" expression="['blitz.points', 'rapid.points', 'name']" icon="flash_on"></th>
+                    <th sortable collection="favorites" expression="['rapid.points', 'blitz.points', 'name']" icon="timer"></th>
                     <th></th>
                 </tr>
             </thead>
@@ -99,9 +99,9 @@
         <table class="app-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
-                    <th></th>
-                    <th sortable collection="challengers" expression="['blitz.points', 'rapid.points']" icon="flash_on"></th>
-                    <th sortable collection="challengers" expression="['rapid.points', 'blitz.points']" icon="timer"></th>
+                    <th sortable collection="challengers" expression="['name', 'blitz.points', 'rapid.points']" icon="account_circle"></th>
+                    <th sortable collection="challengers" expression="['blitz.points', 'rapid.points', 'name']" icon="flash_on"></th>
+                    <th sortable collection="challengers" expression="['rapid.points', 'blitz.points', 'name']" icon="timer"></th>
                     <th></th>
                 </tr>
             </thead>
