--- a/public/index.ejs
+++ b/public/index.ejs
@@ -314,6 +314,8 @@
 
             <div class="app-pagination app-pagination--fixed" pagination></div>
 
+            <div id="modal-container"></div>
+            
             <modal-challenges></modal-challenges>
             <modal-settings></modal-settings>
             <modal-profile></modal-profile>
