--- a/public/index.ejs
+++ b/public/index.ejs
@@ -333,6 +333,7 @@
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
         <script src="lib/angular-cookies.min.js"></script>
+        <script src="lib/html2image.min.js"></script>
 
         <% if (typeof env === 'string' && env === 'dev') { %>
 
