--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -30,13 +30,17 @@
     </div>
     <table class="app-table app-table--ranking mdl-data-table mdl-js-data-table">
         <tbody>
-            <tr ng-repeat="rank in ranking" show-profile="rank.uid" ng-class="{'is-user': rank.uid === user.uid }">
+            <tr ng-repeat="rank in ranking" 
+                ng-class="{'is-user': rank.uid === user.uid }">
                 <td class="app-table__rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
                 <td class="app-table__user mdl-data-table__cell--non-numeric">
-                    <img avatar
-                         class="app-table__avatar" 
-                         ng-src="{{rank.avatar}}">
-                    <span class="app-table__name">{{ rank.name }}</span>
+                    <a href
+                       show-profile="rank.uid">
+                        <img avatar
+                             class="app-table__avatar" 
+                             ng-src="{{rank.avatar}}">
+                        <span class="app-table__name">{{ rank.name }}</span>
+                    </a>
                 </td>
                 <td class="app-table__points">{{ rank.points }}</td>
             </tr>
