fix close drawer

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -245,7 +245,7 @@
                     </a>
                     <a class="mdl-navigation__link" 
                        href
-                       ng-click="inviteFriends()">
+                       ng-click="closeDrawer(); inviteFriends()">
                         <i class="material-icons">person_add</i>
                         {{ 'invite' | translate }}
                     </a>
