add players count

--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -48,3 +48,4 @@
     </table>
     <div class="app-pagination" pagination></div>
 </div>
+<div ng-if="count" class="app-ranking__count">{{ count }} {{ 'players'|translate }}</div>
