--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1458,6 +1458,12 @@ a {
   top: 8px;
 }
 
+.app-ranking__count {
+  text-align: right;
+  width: 100%;
+  padding: 0 8px;
+}
+
 .app-spinner--search-game {
   position: relative;
   margin-bottom: 24px;
