--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -282,7 +282,7 @@
 
 .app-card__profile-avatar {
   left: initial;
-  right: 32px;
+  right: 20px;
 }
 
 .app-profile__action {
@@ -321,6 +321,15 @@
 
 .app-profile__game-date {
   float: left;
+}
+
+.app-profile__trophy { 
+  margin-left: 8px;
+  margin-right: 0;
+}
+
+.app-profile__trophy:nth-child(10n + 10) {
+  margin-left: 0;
 }
 
 .app-modal__close {
@@ -693,30 +702,6 @@
   }
 }
 
-@media (max-width: 479px) {
-
-  .app-form__choices-colors button {
-    margin-left: 8px;
-  }
-
-  .app-head {
-    padding: 8px;
-  }
-
-  .app-head .app-button__create-game {
-    left: auto;
-  }
-
-  .app-table__sortable {
-    margin-left: -6px;
-    margin-right: 0;
-  }
-
-  .app-table__sortable:after {
-    margin-right: 0;
-  }
-}
-
 @media screen and (max-width: 599px) {
 
   .app-ranking__toggle-content .app-button:nth-child(2n +2) {
@@ -730,6 +715,11 @@
   .app-profile__action {
     right: initial;
     left: 8px;
+  }
+
+  .app-profile__trophy {
+    margin-left: 2%;
+    margin-right: 0;
   }
 
   .app-modal__close {
@@ -814,5 +804,38 @@
     border-right: 1px solid rgba(0,0,0,.12);
     right: initial;
     left: 0;
+  }
+}
+
+@media (max-width: 479px) {
+
+  .app-form__choices-colors button {
+    margin-left: 8px;
+  }
+
+  .app-head {
+    padding: 8px;
+  }
+
+  .app-head .app-button__create-game {
+    left: auto;
+  }
+
+  .app-table__sortable {
+    margin-left: -6px;
+    margin-right: 0;
+  }
+
+  .app-table__sortable:after {
+    margin-right: 0;
+  }
+
+  .app-profile__trophy {
+    margin-right: 0;
+    margin-left: 5%;
+  }
+
+  .app-profile__trophy:nth-child(5n + 5) {
+    margin-left: 0;
   }
 }
