--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1003,7 +1003,7 @@ a {
 
 .app-card__profile-avatar {
   position: absolute;
-  left: 32px;
+  left: 20px;
   top: 54px;
 }
 
@@ -1074,7 +1074,6 @@ a {
 
 .app-profile__info {
   display: inline-block;
-  margin-right: 6px;
   font-size: 15px;
   line-height: initial;
   font-weight: 700;
@@ -1137,6 +1136,14 @@ a {
 
 .app-profile__info-game {
   margin: 8px 0;
+}
+
+.app-profile__info-more {
+  position: relative;
+  top: 6px;
+  display: inline-block;
+  height: 24px;
+  line-height: 24px;
 }
 
 .app-profile__stats {
@@ -1312,6 +1319,27 @@ a {
   width: 100%;
   text-align: center;
   margin: 8px 0;
+}
+
+.app-profile__trophy {
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  margin-right: 8px;
+  margin-top: 8px;
+}
+
+.app-profile__trophy.no-trophy img {
+  opacity: 0.3;
+}
+
+.app-profile__trophy:nth-child(10n + 10) {
+  margin-right: 0;
+}
+
+.app-profile__trophy img {
+  width: 100%;
+  height: 100%;
 }
 
 .app-element__head {
@@ -3091,6 +3119,8 @@ a {
   .app-button__fixed.app-button__fixed--game {
     bottom: 52px;
   }
+
+
 }
 
 @media screen and (min-width: 600px) {
@@ -3150,14 +3180,14 @@ a {
   }
 
   .app-card__profile-title {
-    height: 60px;
-    padding-bottom: 24px;
-    padding-top: 8px;
+    height: 40px;
+    padding-bottom: 0;
+    padding-top: 0;
   }
 
   .app-card__profile-title .app-profile__action {
-    top: 8px;
-    right: 8px;
+    top: 20px;
+    right: 20px;
   }
 
   .app-card__profile-actions .app-button {
@@ -3165,7 +3195,7 @@ a {
   }
 
   .app-card__profile-avatar {
-    top: 39px;
+    top: 20px;
   }
 
   .app-card__profile-avatar .app-avatar{
@@ -3176,6 +3206,7 @@ a {
   .app-card__profile-title-text {
     font-size: 16px;
     height: 24px;
+    display: none;
   }
 
   .app-card__profile-stats {
@@ -3551,6 +3582,17 @@ a {
     font-size: 8px;
     font-weight: normal;
   }
+  
+  .app-profile__trophies {
+    padding: 0 1%;
+    width: 100%;
+  }
+  .app-profile__trophy {
+    width: 8%;
+    height: 8%;
+    margin-right: 2%;
+    margin-top: 2%;
+  }
 
   .app-create-game__choices .app-button {
     width: 32%;
@@ -3722,6 +3764,17 @@ a {
 
   .app-profile__name .app-icon--star {
     font-size: 12px;
+  }
+
+  .app-profile__trophy {
+    width: 16%;
+    height: 16%;
+    margin-right: 5%;
+    margin-top: 4%;
+  }
+
+  .app-profile__trophy:nth-child(5n + 5) {
+    margin-right: 0;
   }
 
   .app-head {
