--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2822,6 +2822,7 @@ a {
   .app-mobile__title {
     position: absolute;
     left: 56px;
+    right: 60px;
     top: 10px;
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   }
