--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,15 @@ a {
   -ms-user-select: none;
 }
 
+.app__no-select {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 [show-profile] {
   cursor: pointer;
 }
