add selected is touch piece game

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2307,13 +2307,21 @@ a {
   background-color: #C0CA33;
 }
 
+.app-game__box.is-touch,
 .app-game__box.is-check {
   border-style: ridge solid;
   border-width: 3px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+}
+
+.app-game__box.is-touch {
   border-color: #C0CA33;
+}
+
+.app-game__box.is-check {
+  border-color: #DB4437;
 }
 
 .app-game__box.ui-droppable {
@@ -3916,7 +3924,7 @@ a {
   }
 
   .app-game__box.last-turn,
-  .app-game__box.selected,
+  .app-game__box.is-touch,
   .app-game__box.is-check {
     border-width: 2px;
   }
