add meta theme color

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -19,6 +19,8 @@
         <meta name="twitter:description" content="<%= description %>" />
         <meta name="twitter:image" content="https://worldofchess.online/images/logo.png" />
 
+        <meta name="theme-color" content="#795548" />
+
         <base href="/">
         
         <title><%= title %> - World of Chess</title>
