--- a/public/index.ejs
+++ b/public/index.ejs
@@ -10,14 +10,14 @@
         <meta property="og:locale" content="<%= lang %>" />
         <meta property="og:title" content="<%= title %> - World of Chess" />
         <meta property="og:description" content="<%= description %>" />
-        <meta property="og:image" content="https://worldofchess.online/images/logo.png" />
+        <meta property="og:image" content="https://www.worldofchess.online/images/logo.png" />
         <meta property="fb:app_id" content="1687859708170830" />
 
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@WorldOfChess_" />
         <meta name="twitter:title" content="<%= title %> - World of Chess" />
         <meta name="twitter:description" content="<%= description %>" />
-        <meta name="twitter:image" content="https://worldofchess.online/images/logo.png" />
+        <meta name="twitter:image" content="https://www.worldofchess.online/images/logo.png" />
 
         <base href="/">
         
