--- a/public/index.ejs
+++ b/public/index.ejs
@@ -39,6 +39,7 @@
         <link rel="alternate" hreflang="zh" href="https://www.worldofchess.online/zh/"/>
         
         <link rel="shortcut icon" href="/images/favicon.ico">
+        <link rel="manifest" href="/manifest.json">
 
         <!-- Page styles -->
         <link href="css/material/material.min.css" rel="stylesheet">
